subprojects {
    apply plugin: 'java'
    apply plugin: 'groovy'
    //apply plugin: 'test-report-aggregation'

    version = secp256k1Version     // set in gradle.properties
    group = 'org.bitcoinj.secp256k1'

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation("org.bitcoinj:bitcoinj-core:0.17-alpha3");

        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
        testImplementation "org.junit.jupiter:junit-jupiter-api:5.10.0"
        testImplementation "org.junit.jupiter:junit-jupiter-params:5.10.0"
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.10.0"
    }

    java {
        sourceCompatibility = JavaVersion.toVersion("21")
        targetCompatibility = JavaVersion.toVersion("21")
    }

    test {
        useJUnitPlatform()
        def userHome = System.getProperty("user.home")
        systemProperty "java.library.path", findProperty("javaPath") ?: "${userHome}/.nix-profile/lib"
        jvmArgs += '--enable-preview'
        jvmArgs += '--enable-native-access=ALL-UNNAMED'
    }

    tasks.withType(JavaCompile).configureEach {
        options.release = 21
        options.compilerArgs += ['--enable-preview']
    }

    tasks.withType(JavaExec) {
        jvmArgs += '--enable-preview'
        jvmArgs += '--enable-native-access=ALL-UNNAMED'
    }
}
